Fixed homepage horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -2,23 +2,19 @@
   margin: 0; 
   padding: 0; 
   box-sizing: border-box;
+  outline: 1px solid #f00 !important;
+  
 }
-
 body, html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
   scroll-behavior: smooth;
-
 }
-
-
 .grid {
-  /* TODO copy all grid formatting from portfolio to here; */
-  border: 1px solid black;
+  /* outline: 1px solid black; */
   padding: 0.75rem 0.75rem 0.75rem 0.75rem;
   display: grid;
   height: auto;
@@ -28,29 +24,25 @@ body, html {
   grid-template-columns: 1fr;
   grid-template-rows: auto 1fr;
   gap: 0.5rem;
-  /* Grid Auto Rows and Grid Auto Columns 
-  grid-auto-rows specifies the height of implicitly added grid rows.
-  px, %, fr, repeat()*/
+  background-color: lightblue
+  /* px, %, fr, repeat()*/
   /* minmax(x, y) */
   /* auto-fit */
   /* grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   means - "Repeat as many columns that will fit on a screen. 
   Each column should be a minimum of 100px wide and a maximum of 1fr wide." */
 }
-
 header, 
 .logo-bar, 
-.filter-search,
+.filter-sort,
 .results-container,
 .posts,
 .post,
 .post-with-subreddit,
 .comments,
 .comment {
-  border: 1px solid black;
-
+  /* outline: 1px solid black; */
 }
-
 header {
   grid-area: header;
   display: flex;
@@ -60,16 +52,26 @@ header {
 }
 
 .logo-bar {
+  
 }
 
 .logo-bar img {
-  height: 4.5vh;
-  min-height: 30px;;
-  max-height: 10rem;
+  height: 6vh;
+  min-height: 30px;
+  max-height: 3rem;
 }
 
-.filter-search {
+.filter-sort  {
+  height: 5vh;
+  max-height: 2.5rem;
+  width: 70%;
+  max-width: 30rem;
+}
 
+.filter-sort input {
+  width: 100%;
+  height: 100%;
+  padding: 0 0.5rem 0 0.5rem;
 }
 
 .results-container {  
@@ -77,7 +79,10 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;  
+  flex-direction: column;
+  /* overflow: hidden; */
+  /* outline: 1px solid red; */
+
 }
 
 
@@ -95,6 +100,12 @@ header {
     display: block;
   }
 
+}
+
+@media only screen and (min-width: 916px) {
+  .posts {
+    width: 55rem;
+  }
 }
 
 /* r/all */
@@ -162,42 +173,131 @@ header {
   text-align: center;
 }
 
+
+/*  */
 .posts {
-  width: 100%;
-  max-width: 60rem;
+  /* width: 60rem;
+  max-width: 100vw; */
+  /* width: 100%; */
+
+  /* width: 100vw; */
+
+  /* max-width: 60rem; */
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  
+  background-color: lightgreen;
+
+  /* justify-content: center;
+  align-content: center;
+  justify-items: center;
+  align-items: center; */
+
+  /* width: 55rem; */
+
+
+  max-width: 100vw; 
+
+
+
 }
 
-.post {  
+.post {
+  display: flex;
+  justify-content: center;
+  /* width: 100%; */
+/* 
+  width: 55rem;
+  max-width: 100vw; */
+  /* justify-content: center;
+  align-content: center;
+  justify-items: center;
+  align-items: center; */
+  width: 100%;
+
+}
+
+.post .container {
+  /* width: 100%; */
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 0.4rem;
+  background-color: pink;
+  
+
+  width: 100%;
+  height: 100%; 
+
+  /* width: 55rem;
+  max-width: 100vw;  */
+
+
 }
 
-.post img {
-  min-width: 5rem;
-  max-width: 50rem;
-  height: auto;
-  max-height: 10rem;
+.post .container div {
+  display: flex;
+  /* outline: 1px solid; */
   
+}
+
+
+.post .container img {
+  /* min-width: 300px;
+  max-width: 40rem;
+  height: auto;   
+  max-height: 30rem; */
+  /* width: 85%; */
+  background-color: black;
+
+    /* max-width: 50rem; */
+
+  max-width: 85%;
+  max-height: 35rem;
+
+  
+}
+
+.post .container video {
+  /* min-width: 5rem; */
+  /* max-width: 50rem;
+  height: auto;
+  max-height: 20rem; */
+  /* width: 85%; */
+  background-color: black;
+
+   /* max-width: 50rem; */
+   max-width: 85%;
+   max-height: 35rem;
+
+}
+
+.post .container h1 {
+  /* min-width: 5rem; */
+
+  /* max-width: 50rem;
+  height: auto;
+  max-height: 20rem; */
+
+  /* width: 85%;
+  max-width: 50rem; */
+
+  max-width: 85%;
+  max-height: 35rem;
+
 }
 
 .post .subreddit {
   display: none;
 }
 
-.post .container {
-  height: 100%;
-  width: 100%;
-  background-color: pink;
-}
-
 .external-link {
-}
+  width: 1rem;  
 
+  display: none;
+  
+
+}
 /* click-through page with comments */
 
 .post-and-comments {
@@ -206,7 +306,7 @@ header {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  border: 1px solid red;
+  /* outline: 1px solid red; */
 
 }
 
@@ -311,3 +411,6 @@ header {
     from {transform: rotate(0deg);}
     to {transform: rotate(360deg);}
 }
+
+
+
